--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+*::selection {
+  background-color: #79ffe1;
+}
+
+[data-reach-dialog-overlay] {
+  background-color: #eee;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
